--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 STRIPE_PUBLISHABLE_KEY=your_test_key_here
 STRIPE_SECRET_KEY=your_test_key_here
+ADMIN_BASIC_AUTH_USERNAME=enter_auth_username_key_here
+ADMIN_BASIC_AUTH_PASSWORD=enter_auth_password_key_here
